# iidx_pico

./: .gitignore  README.md  README_CN.md
Gen1Archive/cad/: TT_assemble_6804.scad  TT_base.scad  TT_base_hinge.scad  TTshaft.scad  bearing_seat.scad  beatmania_IIDX.dxf  iidx_keycap_main.scad  iidx_tt v1.stl  kb_assemble.scad  keycap_frame.scad  keycap_frame_aux.stl  keycap_frame_main.stl  pcb_top.scad  pogo_wrapper_v2.scad  skf6805.stl  (+3 more)
PCB/: fp-info-cache  iidx_pico.kicad_pcb  iidx_pico.kicad_prl
Tools/: cli_tool.html  gamepad_test.html
cad/: TT_assemble_6804.scad  TT_base.scad  TT_base.stl  TT_base_hinge.scad  TT_base_hinge.stl  TT_base_hinge_cover.stl  TT_disc_150.dxf  TTshaft.scad  TTshaft_6804.stl  TTshaft_6805.stl  bearing_seat.scad  bearing_seat_6804.stl  bearing_seat_6805.stl  bearing_seat_hinge.scad  beatmania_iidx.stl  iidx_keycap_choc_v2.stl  iidx_keycap_main.scad  kb_assemble.scad  keycap_frame.scad  nsk6804.stl  pcb_bottom.scad  pcb_bottom.stl  pcb_top.scad  pogo5f.stl  pogo_top.stl  pogo_wrapper_v2.scad  seat6805_wuhao.stl  tt_led_ring.scad
doc/: Firmware_manual.pptx  IIDX_Pico_Manual.pptx
firmware/: README.md
firmware/src/: CMakeLists.txt  as5600.c  as5600.h  ble.c  ble.h  board_defs.h  buttons.c  buttons.h  cli.c  cli.h  commands.c  config.c  config.h  gamepad.gatt  hebtn.c  hebtn.h  main.c  mt6701.c  mt6701.h  rgb.c  rgb.h  save.c  save.h  savedata.c  savedata.h  setup.c  setup.h  tmag5273.c  tmag5273.h  tt_blade.c  tt_blade.h  tt_heatbar.c  tt_heatbar.h  tt_rainbow.c  tt_rainbow.h  turntable.c  turntable.h  usb_descriptors.c  usb_descriptors.h
(+194 files in other folders)
